fixing button on ios

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -43,6 +43,7 @@ input[type=submit] {
   width: auto;
   padding: 0 2rem;
   cursor: pointer;
+  appearance: none;
 }
 
 ::-moz-placeholder,
